deployment-svc2v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-svc2v2
  namespace: ns2
  labels:
    app: helloworld-svc2v2
spec:
 replicas: 1
 selector:
  matchLabels:
     app: helloworld-svc2
     version: v2
 template:
    metadata:
     name: helloworld-svc2
     labels:
       app: helloworld-svc2
       version: v2
    spec:
      containers:
      - name: helloworld-svc2v2
        image: rezabah/svc2v2:v2
        ports:
        - containerPort: 80
          name: http-web
