external-name-svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc1
  namespace: ns2
spec:
  type: ExternalName
  externalName: helloworld-svc1.ns1.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
