external-name-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc2
  namespace: ns1
spec:
  type: ExternalName
  externalName: helloworld-svc2.ns2.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
