service-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc2
  namespace: ns1
  labels:
    app: helloworld-svc2
spec:
  selector:
    app: helloworld-svc2
  ports:
    - port: 80
      appProtocol: http
      targetPort: 80
