dr-exposed-services-ns1.yaml
# distinations rules for any services exposed outside should be deployed in the home namespace of the service
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc1-ns1
  namespace: ns1
spec:
  host: helloworld-svc1.ns1.svc.cluster.local # host is the target kubernetes service; this could be a host/service defined by Service Entry too
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc2-ns1
  namespace: ns1
spec:
  host: helloworld-svc2.ns1.svc.cluster.local # host is the target kubernetes service; this could be a host/service defined by Service Entry too
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
