vs-exposed-services-ns2.yaml
# exposed services virtual service should be bound to a gateway
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-ns2-gateway
  namespace: ns2
spec:
  hosts:
    - ns2.helloworld.com
  gateways:
    - istio-system/my-gateway  
 # http routing rules are listed by names here and the order is important, any of them is matched first, it will go through and then the rest will be ignored
  http:

    - name: svc1 
      match:      
      - uri:
          prefix: /svc1
      rewrite:
        uri: /     
      route:
        - destination:
            host: helloworld-svc1.ns1.svc.cluster.local
            subset: v1   

    - name: svc2      
      match:      
      - uri:
          prefix: /svc2
      rewrite:
        uri: /     
      route:
        - destination:
            host: helloworld-svc2.ns1.svc.cluster.local
            subset: v1

    - name: default-route        
      route:
      - destination:
          host: helloworld-svc1.ns1.svc.cluster.local
          subset: v1
