vsdr-ns1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-ns1-gateway
  namespace: ns1
spec:
  hosts:
    - ns1.helloworld.com
    #- ns2.helloworld.com
    #- '*.helloworld.com'
  gateways:
    - istio-system/my-gateway  
 # http routing rules are listed by names here and the order is important, any of them is matched first, it will go through and then the rest will be ignored
  http:

    - name: svc1 
      match:      
      - uri:
          prefix: /svc1
      rewrite:
        uri: /     
      route:
        - destination:
            host: helloworld-svc1.ns1.svc.cluster.local
            subset: v2   

    - name: svc2      
      match:      
      - uri:
          prefix: /svc2
      rewrite:
        uri: /     
      route:
        - destination:
            host: helloworld-svc2.ns1.svc.cluster.local
            subset: v1

    - name: default-route        
      route:
      - destination:
          host: helloworld-svc2.ns1.svc.cluster.local
          subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc1-ns1-gateway
  namespace: ns1
spec:
  host: helloworld-svc1.ns1.svc.cluster.local # host is the target kubernetes service; this could be a host/service defined by Service Entry too
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc2-ns1-gateway
  namespace: ns1
spec:
  host: helloworld-svc2.ns1.svc.cluster.local # host is the target kubernetes service; this could be a host/service defined by Service Entry too
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
