vsdr-svc1-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-svc1
  namespace: ns1
spec:
  hosts:
    - svc1.helloworld.com
    - helloworld-svc1  # if you use shortnames here it will append ns1.svc.cluster.local or ns2.svc.cluster.local (depends where it's deployed)
  gateways:
  - istio-system/my-gateway 
  - mesh 
  http:
  - route:
    - destination:
        host: helloworld-svc1 # if you use shortnames here it will append ns1.svc.cluster.local or ns2.svc.cluster.local (depends where it's deployed)
        subset: v1
      weight: 100
    - destination:
        host: helloworld-svc1 # if you use shortnames here it will append ns1.svc.cluster.local or ns2.svc.cluster.local (depends where it's deployed)
        subset: v2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc1
  namespace: ns1
spec:
  host: helloworld-svc1 # host is the target kubernetes service 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
