vsdr-svc1-ns1-with-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-svc1-ns1
  namespace: ns1
spec:
  hosts:
    - ns1site.svc1.helloworld.com
    - helloworld-svc1.ns1.svc.cluster.local   # if you use shortnames here it will append the namespace on top(metadata) as a suffix to it (like ns2.svc.cluster.local) (the namespace that the VS is deployed in)
  gateways:
  - istio-system/my-gateway  
  - mesh
  exportTo: 
  - "*"
# http routing rules are listed by names here and the order is important, any of them is matched first, it will go through and then the rest will be ignored
  http:

    - name: v2-route 
      match:      
      - uri:
          prefix: /v2
      rewrite:
        uri: /     
      route:
        - destination:
            host: helloworld-svc1.ns1.svc.cluster.local
            subset: v2   

    - name: v1-route        
      match:      
      - uri:
          prefix: /v1
      rewrite:
        uri: /     
      route:
        - destination:
            host: helloworld-svc1.ns1.svc.cluster.local
            subset: v1

    - name: source-namespace-route
      match:      
      - sourceNamespace: ns2
      route:
       - destination:
          host: helloworld-svc1.ns1.svc.cluster.local
          subset: v1

    - name: source-namespace-route
      match:      
      - sourceNamespace: ns3
      route:
       - destination:
          host: helloworld-svc1.ns1.svc.cluster.local
          subset: v2

    - name: source-podlabel-route
      match:      
      - sourceLabels:
          mylabel: mypod1
      route:
       - destination:
          host: helloworld-svc1.ns1.svc.cluster.local
          subset: v1

    - name: header-route-jason
      match:
      - headers:
         end-user:
           exact: jason 
      route:
        - destination:
           host: helloworld-svc1.ns1.svc.cluster.local
           subset: v2
   
    - name: header-route-g2
      match:
      - headers:
         end-db:
           exact: g2 
      route:
        - destination:
           host: helloworld-svc1.ns1.svc.cluster.local
           subset: v5

   
    - name: default-route        
      # route:
      # - destination:
      #     host: helloworld-svc1.ns1.svc.cluster.local
      #     subset: stable
      route:
        - destination:
            host: helloworld-svc1 # if you use shortnames here it will append ns1.svc.cluster.local (the namespace that the VS is deployed in)
            subset: v1
          weight: 50
        - destination:
            host: helloworld-svc1 # if you use shortnames here it will append ns1.svc.cluster.local (the namespace that the VS is deployed in)
            subset: v2
          weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc1-ns1
  namespace: ns1
spec:
  host: helloworld-svc1.ns1.svc.cluster.local # host is the target kubernetes service; this could be a host/service defined by Service Entry too
  exportTo: 
  - "*"
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
