vsdr-svc1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-svc1
  namespace: ns1
spec:
  hosts:
    - svc1.helloworld.com
    - helloworld-svc1.ns1   # if you use shortnames here it will append ns1.svc.cluster.local (the namespace that the VS is deployed in)
  gateways:
  - istio-system/my-gateway  
  - mesh
  http:
  - name: "v1-route"
    match:
    - headers:
       end-user:
        exact: jason 
    - uri:
        prefix: "/v1"
    - sourceNamespace: tenant1-ns 
    route:
    - destination:
        host: helloworld-svc1.ns1
        subset: v1
  - name: "v2-route"
    match:
    - uri:
        prefix: "/v2"
    route:
    - destination:
        host: helloworld-svc1.ns1
        subset: v2
  - name: "default-route"
    route:
    - destination:
        host: helloworld-svc1.ns1
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-svc1
  namespace: ns1
spec:
  host: helloworld-svc1.ns1 # host is the target kubernetes service; this could be a host/service defined by Service Entry
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
